Old H2Rank System
Old halo2 ranking system for the dedicated server side, this project is
no longer maintained and is only for reference it was originaly created
in 2008 before XLive went down, any ranking implemented in the future
will be implemented directly into the Cartographer Project.

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,11 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+*.tlog
+Debug/dllmain.obj
+*.manifest
+Debug/H2Rank.lastbuildstate
+*.log
+Debug/H2Rank.obj
+*.obj
+Debug/vc100.idb
